welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: identifier expected but '(' found.
		if(T.(c) == value){
                     ^